# taglib-experiments

./: Brick.ttl  Makefile  README.md  alpha.json  brick2haystack.py  client.py  g36-ahu-a9.ttl  generate.py  haystack2brick.py  pyproject.toml  simple_map.py  supplementary-shapes.ttl  util.py
automapping-stuff/: bh_hierarchy_expand.py
oap/: generate_oap_map.py  oap-points.csv  oap_map.ttl
protos/: generate_haystack_proto_map.py  proto-filter.py  protos.csv
taxonomies/: brick-shapes.ttl  unified_taxonomy.yaml  unified_taxonomy_flat.yaml  unified_taxonomy_haystack.yaml
utah/: State-of-Utah-Haystack-Tagging-Reference-Model-Example.xlsx
