[tool.poetry]
name = "taglib"
version = "0.1.0"
description = "Mapping between Brick and Haystack"
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
license = "bsd-3-clause"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
brickschema = "^0.6.0a6"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
pandas = "^1.4.1"
networkx = "^2.7"
matplotlib = "^3.5.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
